# jaxley-extracellular

./: .envrc  .gitignore  README.md  flake.nix  pyproject.toml  taskfile.yml
infra/tofu/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
scripts/: pilot_sweep.py  sweep.py
src/jaxley_extracellular/: __init__.py  cli.py  smoke.py
src/jaxley_extracellular/extracellular/: __init__.py  discretization.py  equivalent_current.py  experiment.py  field.py  jaxley_adapter.py  response.py  results_store.py  sharding.py  system_monitor.py  tracker.py  typing_helpers.py  waveforms.py
tests/: conftest.py  test_ecs_grad.py  test_ecs_integration_smoke.py  test_ecs_operator_consistency.py  test_results_store.py  test_sharding.py  test_smoke.py  test_sweep_integration.py  test_system_monitor.py  test_tracker.py  test_waveforms_and_response.py
